--- a/CinemaNow/CinemaNow.API/appsettings.Development.json
+++ b/CinemaNow/CinemaNow.API/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "CinemaNow.Services.MovieService": "Warning",
+      "CinemaNow.Services.UserService": "Information"
     }
   }
 }
