--- a/CinemaNow/CinemaNow.API/appsettings.json
+++ b/CinemaNow/CinemaNow.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CinemaNowConnection": "Data Source=localhost, 1434; Initial Catalog=IB200033; user:sa; Password:QWEasd123!; TrustServerCertificate=True"
+    "CinemaNowConnection": "Server=localhost,1434;Database=IB200033;User ID=sa;Password=QWEasd123!;TrustServerCertificate=True"
   }
 }
