--- a/CinemaNow/UI/cinemanow_desktop/pubspec.yaml
+++ b/CinemaNow/UI/cinemanow_desktop/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
+  image_picker: ^0.8.5+3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +40,8 @@ dependencies:
   http: ^1.2.1
   json_annotation: ^4.9.0
   provider: ^6.1.2
+  flutter_form_builder: ^8.0.0
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
