--- a/CinemaNow/UI/cinemanow_desktop/pubspec.yaml
+++ b/CinemaNow/UI/cinemanow_desktop/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   image_picker: ^0.8.5+3
+  multi_select_flutter: ^4.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
