--- a/CinemaNow/UI/cinemanow_mobile/pubspec.yaml
+++ b/CinemaNow/UI/cinemanow_mobile/pubspec.yaml
@@ -30,11 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0
+  image_picker: ^0.8.5+3
+  multi_select_flutter: ^4.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  http: ^1.2.1
+  json_annotation: ^4.9.0
+  provider: ^6.1.2
+  flutter_form_builder: ^8.0.0
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  json_serializable: ^6.8.0
+  build_runner: ^2.4.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
