--- a/CinemaNow/CinemaNow.API/appsettings.json
+++ b/CinemaNow/CinemaNow.API/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CinemaNowConnection": "Server=localhost,1434;Database=IB200033;User ID=sa;Password=QWEasd123!;TrustServerCertificate=True"
+  },
+  "Stripe": {
+    "PublishableKey": "publishable key",
+    "SecretKey": "secret key"
   }
 }
