hide stripe secret api key

--- a/CinemaNow/CinemaNow.API/appsettings.json
+++ b/CinemaNow/CinemaNow.API/appsettings.json
@@ -10,7 +10,7 @@
     "CinemaNowConnection": "Server=localhost,1434;Database=IB200033;User ID=sa;Password=QWEasd123!;TrustServerCertificate=True"
   },
   "Stripe": {
-    "PublishableKey": "publishable key",
-    "SecretKey": "secret key"
+    "PublishableKey": "",
+    "SecretKey": ""
   }
 }
