--- a/CinemaNow/UI/cinemanow_mobile/pubspec.yaml
+++ b/CinemaNow/UI/cinemanow_mobile/pubspec.yaml
@@ -30,11 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0
-  image_picker: ^0.8.5+3
+  intl: ^0.19.0
+  image_picker: ^1.0.0
   multi_select_flutter: ^4.0.0
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,7 +40,7 @@ dependencies:
   http: ^1.2.1
   json_annotation: ^4.9.0
   provider: ^6.1.2
-  flutter_form_builder: ^8.0.0
+  flutter_form_builder: ^9.4.1
   file_picker: ^8.0.0+1
 
 dev_dependencies:
@@ -54,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^5.0.0
   json_serializable: ^6.8.0
   build_runner: ^2.4.11
 
