--- a/CinemaNow/UI/cinemanow_mobile/pubspec.yaml
+++ b/CinemaNow/UI/cinemanow_mobile/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.0.0
   multi_select_flutter: ^4.0.0
+  flutter_stripe: ^9.0.0
+  flutter_dotenv: ^5.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -70,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/.env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
