--- a/CinemaNow/CinemaNow.API/CinemaNow.API.csproj
+++ b/CinemaNow/CinemaNow.API/CinemaNow.API.csproj
@@ -20,6 +20,7 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
 	  </PackageReference>
+	  <PackageReference Include="System.Drawing.Common" Version="8.0.10" />
   </ItemGroup>
 
   <ItemGroup>
