--- a/CinemaNow/CinemaNow.Services/CinemaNow.Services.csproj
+++ b/CinemaNow/CinemaNow.Services/CinemaNow.Services.csproj
@@ -23,6 +23,7 @@
   <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
   <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   <PackageReference Include="QRCoder" Version="1.6.0" />
+  <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   <PackageReference Include="Stripe.net" Version="46.1.0" />
   <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.10" />
   </ItemGroup>
