--- a/CinemaNow/UI/cinemanow_desktop/pubspec.yaml
+++ b/CinemaNow/UI/cinemanow_desktop/pubspec.yaml
@@ -33,8 +33,9 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^0.8.5+3
   multi_select_flutter: ^4.0.0
-
-
+  printing: ^5.10.0
+  pdf: ^3.8.1
+  google_fonts: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
