--- a/CinemaNow/UI/cinemanow_desktop/pubspec.yaml
+++ b/CinemaNow/UI/cinemanow_desktop/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   printing: ^5.10.0
   pdf: ^3.8.1
   google_fonts: ^5.1.0
+  fl_chart: ^0.63.0
+  screenshot: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
