--- a/CinemaNow/CinemaNow.Services/CinemaNow.Services.csproj
+++ b/CinemaNow/CinemaNow.Services/CinemaNow.Services.csproj
@@ -21,6 +21,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
+  <PackageReference Include="Microsoft.ML" Version="3.0.1" />
+  <PackageReference Include="Microsoft.ML.Recommender" Version="0.21.1" />
   <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   <PackageReference Include="QRCoder" Version="1.6.0" />
   <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
