--- a/CinemaNow/CinemaNow.Services/CinemaNow.Services.csproj
+++ b/CinemaNow/CinemaNow.Services/CinemaNow.Services.csproj
@@ -14,13 +14,18 @@
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="EasyNetQ" Version="7.8.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+  <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.10" />
   <PackageReference Include="Microsoft.ML" Version="3.0.1" />
   <PackageReference Include="Microsoft.ML.Recommender" Version="0.21.1" />
   <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
