update docker (stripe and rabbitmq)

--- a/CinemaNow/CinemaNow.API/appsettings.json
+++ b/CinemaNow/CinemaNow.API/appsettings.json
@@ -12,5 +12,10 @@
   "Stripe": {
     "PublishableKey": "",
     "SecretKey": ""
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "UserName": "guest",
+    "Password": "guest"
   }
 }
