--- a/CinemaNow/CinemaNow.EmailService/CinemaNow.EmailService.csproj
+++ b/CinemaNow/CinemaNow.EmailService/CinemaNow.EmailService.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-CinemaNow.EmailService-422b19d6-f7bd-4fbf-8126-ce1d0614d7ff</UserSecretsId>
