--- a/CinemaNow/CinemaNow.EmailService/appsettings.json
+++ b/CinemaNow/CinemaNow.EmailService/appsettings.json
@@ -10,5 +10,10 @@
     "SmtpPort": 587,
     "Username": "cinema.now.app@gmail.com",
     "Password": ""
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "UserName": "guest",
+    "Password": "guest"
   }
 }
