--- a/CinemaNow/CinemaNow.API/Properties/launchSettings.json
+++ b/CinemaNow/CinemaNow.API/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5199"
+      "applicationUrl": "http://0.0.0.0:5199"
     },
     "https": {
       "commandName": "Project",
